--- a/soa_app/templates/soa_app/info_covid_pais.html
+++ b/soa_app/templates/soa_app/info_covid_pais.html
@@ -141,6 +141,7 @@
                 <a href="#" onclick="allForm()" class="fa fa-bar-chart"> COVID-19 Historia</a>
                 <a href="#" onclick="openConsultaAI()" class="fa fa-bar-chart">CONSULTAS AI</a>
                 <a href="#" onclick="noticias()" class="fa fa-bar-chart">noticias AI</a>
+                <a href="#" onclick="conRuc()" class="fa fa-bar-chart">CONSULTA RUC</a>
 
 
 
@@ -252,6 +253,10 @@
         function noticias() {
             // Redirigir a la página dniinfo.html
             window.location.href = '/noticias';
+        }
+        function conRuc() {
+            // Redirigir a la página dniinfo.html
+            window.location.href = '/ruc_info';
         }
 
     </script>
